# ilps22qs-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md
bsp/src/: main.rs
bsp/src/examples/: fifo.rs  qvar.rs  read_polling.rs
examples/fifo_stm32f401re/: Cargo.toml  README.md
examples/fifo_stm32f401re/src/: main.rs
examples/fifo_stm32f401re_embassy/: Cargo.toml  README.md
examples/fifo_stm32f401re_embassy/src/: main.rs
examples/qvar_read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/qvar_read_data_polling_stm32f401re/src/: main.rs
examples/qvar_read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/qvar_read_data_polling_stm32f401re_embassy/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs
src/register/: main.rs
