[package]
name = "ilps22qs-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.87.0"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "barometer", "low-power", "qvar"]
repository = "https://github.com/STMicroelectronics/ilps22qs-rs"
description = """
    Platform-agnostic driver for the ILPS22QS ultracompact digital barometer and temperature
    sensor with user-selectable full scale and I2C or SPI interfaces.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
bitfield-struct = "0.11.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
st-mems-bus = "2.0.0"
derive_more = { version = "2.0.1", default-features = false, features = [ "try_from" ] }
st-mem-bank-macro = "2.0.0"

# By default the bit order is assumed ad Least Significant Bit.
[features]
default = ["async"]
bit_order_msb = []
async = []
blocking = []
